--- a/package.json
+++ b/package.json
@@ -47,9 +47,9 @@
     "graphql": "^16.0.1",
     "js-cookie": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
+    "kbar": "^0.1.0-beta.19",
     "lambda-captcha": "^2.1.2",
     "mongodb": "^4.1.3",
-    "kbar": "^0.1.0-beta.19",
     "nanoid": "^3.1.30",
     "next": "^12.0.2",
     "next-connect": "^0.11.0",
@@ -69,10 +69,12 @@
     "react-burger-menu": "^3.0.6",
     "react-codemirror2": "^7.2.1",
     "react-dom": "^17.0.2",
+    "react-hotkeys": "^2.0.0",
     "react-ios-switch": "^0.1.19",
     "react-media": "^1.10.0",
     "react-minimal-datetime-range": "^1.7.0",
     "react-spring": "^9.3.0",
+    "react-super-cmd": "^1.0.6",
     "react-toastify": "^8.0.3",
     "react-toolkit": "^2.0.0-alpha.6",
     "react-tooltip": "^4.2.21",
