--- a/apps/artemis-web/Dockerfile
+++ b/apps/artemis-web/Dockerfile
@@ -1,5 +1,9 @@
 FROM node:14.17.6-bullseye-slim
 
+RUN apt-get update && apt-get install -y --no-install-recommends git \
+    && apt-get clean \
+    && rm -rf /var/lib/apt/lists/*
+
 WORKDIR /app
 
 COPY package.json yarn.lock ./
