--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
     "update": "nx migrate latest",
     "workspace-schematic": "nx workspace-schematic",
     "dep-graph": "nx dep-graph",
-    "help": "nx help",
-    "reactide-server": "webpack-dev-server --config reactide.config.js --mode development --hot"
+    "help": "nx help"
   },
   "private": true,
   "dependencies": {
@@ -45,15 +44,12 @@
     "draft-js": "^0.11.7",
     "express-rate-limit": "^5.5.0",
     "graphql": "^16.0.1",
-    "js-cookie": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
-    "kbar": "^0.1.0-beta.19",
     "lambda-captcha": "^2.1.2",
     "mongodb": "^4.1.3",
     "nanoid": "^3.1.30",
     "next": "^12.0.2",
     "next-connect": "^0.11.0",
-    "next-csrf": "^0.1.1",
     "next-session": "^4.0.2",
     "nx": "^13.1.2",
     "passport": "^0.5.0",
@@ -70,30 +66,20 @@
     "react-codemirror2": "^7.2.1",
     "react-dom": "^17.0.2",
     "react-hotkeys": "^2.0.0",
-    "react-ios-switch": "^0.1.19",
     "react-media": "^1.10.0",
     "react-minimal-datetime-range": "^1.7.0",
     "react-spring": "^9.3.0",
     "react-super-cmd": "^1.0.6",
     "react-toastify": "^8.0.3",
-    "react-toolkit": "^2.0.0-alpha.6",
     "react-tooltip": "^4.2.21",
     "sharp": "^0.29.2",
     "subscriptions-transport-ws": "^0.9.18",
-    "swr": "^1.0.1",
     "tslib": "^2.1.0",
     "typescript-rabbitmq": "^0.0.8",
+    "uuidv4": "^6.2.12",
     "validator": "^13.7.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.16.0",
-    "@babel/core": "^7.16.0",
-    "@babel/plugin-proposal-class-properties": "^7.16.0",
-    "@babel/plugin-proposal-object-rest-spread": "^7.16.0",
-    "@babel/plugin-transform-runtime": "^7.16.0",
-    "@babel/preset-env": "^7.16.0",
-    "@babel/preset-react": "^7.16.0",
-    "@babel/preset-typescript": "^7.16.0",
     "@next/eslint-plugin-next": "^12.0.2",
     "@nrwl/cypress": "13.1.2",
     "@nrwl/eslint-plugin-nx": "13.1.2",
@@ -110,11 +96,6 @@
     "@types/react-dom": "17.0.10",
     "@typescript-eslint/eslint-plugin": "5.3.0",
     "@typescript-eslint/parser": "5.3.0",
-    "@webpack-cli/generators": "^2.4.1",
-    "babel-jest": "^27.3.1",
-    "babel-loader": "^8.2.3",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "css-loader": "^6.5.0",
     "cypress": "^8.7.0",
     "dotenv": "10.0.0",
     "enzyme": "^3.11.0",
@@ -125,8 +106,6 @@
     "eslint-plugin-jsx-a11y": "6.4.1",
     "eslint-plugin-react": "7.26.1",
     "eslint-plugin-react-hooks": "4.2.0",
-    "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^5.5.0",
     "husky": "^7.0.4",
     "jest": "^27.3.1",
     "jest-fetch-mock": "^3.0.3",
@@ -134,15 +113,10 @@
     "next-secure-headers": "^2.2.0",
     "node-sass": "^6.0.1",
     "prettier": "2.4.1",
-    "sass-loader": "^12.3.0",
-    "style-loader": "^3.3.1",
     "ts-jest": "^27.0.7",
     "ts-node": "~10.4.0",
     "typescript": "^4.4.4",
-    "url-loader": "^4.1.1",
-    "webpack": "^5.61.0",
-    "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.4.0"
+    "url-loader": "^4.1.1"
   },
   "husky": {
     "hooks": {
