--- a/apps/artemis-web/Dockerfile
+++ b/apps/artemis-web/Dockerfile
@@ -1,12 +1,12 @@
 FROM node:14.17.6-bullseye-slim
 
-RUN apt-get update && apt-get install -y --no-install-recommends git \
-    && apt-get clean \
+RUN apt update && apt install -y make gcc g++ git python3 \
+    && apt-get clean \ 
     && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /app
 
-COPY package.json yarn.lock ./
+COPY package.json ./
 
 RUN yarn install --frozen-lockfile && yarn cache clean
 
@@ -14,6 +14,6 @@ COPY . .
 
 COPY ./apps/artemis-web/scripts/* ./
 
-RUN yarn run nx build artemis-web --prod
+RUN yarn build --prod --verbose
 
 ENTRYPOINT ["./entrypoint"]
