--- a/package.json
+++ b/package.json
@@ -81,7 +81,7 @@
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^12.0.2",
-    "@nrwl/cypress": "13.1.2",
+    "@nrwl/cypress": "^13.4.3",
     "@nrwl/eslint-plugin-nx": "13.1.2",
     "@nrwl/jest": "13.1.2",
     "@nrwl/next": "13.1.2",
@@ -96,7 +96,9 @@
     "@types/react-dom": "17.0.10",
     "@typescript-eslint/eslint-plugin": "5.3.0",
     "@typescript-eslint/parser": "5.3.0",
-    "cypress": "^8.7.0",
+    "axe-core": "^4.3.5",
+    "cypress": "^9.2.0",
+    "cypress-axe": "^0.14.0",
     "dotenv": "10.0.0",
     "enzyme": "^3.11.0",
     "eslint": "<8.0.0",
