--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,11 @@ Thumbs.db
 
 # Docker volumes
 mongo-data/
+
+# PWA files
+**/public/sw.js
+**/public/workbox-*.js
+**/public/worker-*.js
+**/public/sw.js.map
+**/public/workbox-*.js.map
+**/public/worker-*.js.map
