--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "nanoid": "^3.1.30",
     "next": "^12.0.2",
     "next-connect": "^0.11.0",
+    "next-pwa": "^5.4.4",
     "next-session": "^4.0.2",
     "nx": "^13.1.2",
     "passport": "^0.5.0",
