--- a/.env
+++ b/.env
@@ -59,3 +59,10 @@ LIMIT_REQUESTS=20
 CAPTCHA_WINDOW=900000
 CAPTCHA_TRIES=4
 ARTEMIS_WEB_BASE_DIR=
+
+NEXT_PUBLIC_FIREBASE_API_KEY=<your-api-key>
+NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=<your-auth-domain>
+NEXT_PUBLIC_FIREBASE_PROJECT_ID=<your-project-id>
+NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=<your-storage-bucket>
+NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=<your-sender-id>
+NEXT_PUBLIC_FIREBASE_APP_ID=<your-firebase-app-id>
