--- a/package.json
+++ b/package.json
@@ -43,9 +43,11 @@
     "diff_match_patch": "^0.1.1",
     "draft-js": "^0.11.7",
     "express-rate-limit": "^5.5.0",
+    "firebase": "^9.6.2",
     "graphql": "^16.0.1",
     "jsonwebtoken": "^8.5.1",
     "lambda-captcha": "^2.1.2",
+    "localforage": "^1.10.0",
     "mongodb": "^4.1.3",
     "nanoid": "^3.1.30",
     "next": "^12.0.2",
