--- a/package.json
+++ b/package.json
@@ -81,7 +81,7 @@
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^12.0.2",
-    "@nrwl/cypress": "13.1.2",
+    "@nrwl/cypress": "^13.4.3",
     "@nrwl/eslint-plugin-nx": "13.1.2",
     "@nrwl/jest": "13.1.2",
     "@nrwl/next": "13.1.2",
@@ -96,27 +96,32 @@
     "@types/react-dom": "17.0.10",
     "@typescript-eslint/eslint-plugin": "5.3.0",
     "@typescript-eslint/parser": "5.3.0",
-    "cypress": "^8.7.0",
+    "axe-core": "^4.3.5",
+    "cypress": "^9.2.0",
+    "cypress-axe": "^0.14.0",
     "dotenv": "10.0.0",
     "enzyme": "^3.11.0",
     "eslint": "<8.0.0",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-import": "2.25.2",
-    "eslint-plugin-jsx-a11y": "6.4.1",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "7.26.1",
     "eslint-plugin-react-hooks": "4.2.0",
     "husky": "^7.0.4",
     "jest": "^27.3.1",
+    "jest-axe": "^5.0.1",
     "jest-fetch-mock": "^3.0.3",
     "msw": "^0.35.0",
     "next-secure-headers": "^2.2.0",
     "node-sass": "^6.0.1",
     "prettier": "2.4.1",
+    "react-axe": "^3.5.4",
     "ts-jest": "^27.0.7",
     "ts-node": "~10.4.0",
     "typescript": "^4.4.4",
-    "url-loader": "^4.1.1"
+    "url-loader": "^4.1.1",
+    "whatwg-fetch": "^3.6.2"
   },
   "husky": {
     "hooks": {
