--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
     "@typescript-eslint/eslint-plugin": "5.3.0",
     "@typescript-eslint/parser": "5.3.0",
     "cypress": "^8.7.0",
+    "cz-conventional-changelog": "3.3.0",
     "dotenv": "10.0.0",
     "enzyme": "^3.11.0",
     "eslint": "<8.0.0",
@@ -125,6 +126,11 @@
     "hooks": {
       "pre-commit": "yarn run format && yarn run lint",
       "pre-push": "yarn run affected:test"
+    }
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
     }
   }
 }
