--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "react-tooltip": "^4.2.21",
     "sharp": "^0.29.2",
     "subscriptions-transport-ws": "^0.9.18",
+    "telnet-client": "^2.0.1",
     "tslib": "^2.1.0",
     "typescript-rabbitmq": "^0.0.8",
     "uuidv4": "^6.2.12",
