--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "react-hotkeys": "^2.0.0",
     "react-media": "^1.10.0",
     "react-minimal-datetime-range": "^1.7.0",
+    "react-nice-input-password": "^2.7.0",
     "react-spring": "^9.3.0",
     "react-super-cmd": "^1.0.6",
     "react-toastify": "^8.0.3",
