--- a/.env
+++ b/.env
@@ -28,6 +28,10 @@ LDAP_GROUP_SEARCH_ATTRIBUTES=mail,uid
 LDAP_EMAIL_FIELDNAME=mail
 LDAP_ADMIN_GROUP=admin_staff
 
+GOOGLE_ENABLED=false
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+
 # API HOSTS
 CONFIG_HOST=configuration
 CONFIG_PORT=3000
