--- a/.env
+++ b/.env
@@ -28,9 +28,9 @@ LDAP_GROUP_SEARCH_ATTRIBUTES=mail,uid
 LDAP_EMAIL_FIELDNAME=mail
 LDAP_ADMIN_GROUP=admin_staff
 
-NEXT_PUBLIC_GOOGLE_ENABLED=false
-GOOGLE_CLIENT_ID=
-GOOGLE_CLIENT_SECRET=
+GOOGLE_ENABLED=false
+GOOGLE_CLIENT_ID=xxxxxxxxxxxxxxxxxx
+GOOGLE_CLIENT_SECRET=xxxxxxxxxxxxxxxxxx
 
 # API HOSTS
 CONFIG_HOST=configuration
