--- a/.env
+++ b/.env
@@ -28,7 +28,7 @@ LDAP_GROUP_SEARCH_ATTRIBUTES=mail,uid
 LDAP_EMAIL_FIELDNAME=mail
 LDAP_ADMIN_GROUP=admin_staff
 
-GOOGLE_ENABLED=false
+NEXT_PUBLIC_GOOGLE_ENABLED=false
 GOOGLE_CLIENT_ID=xxxxxxxxxxxxxxxxxx
 GOOGLE_CLIENT_SECRET=xxxxxxxxxxxxxxxxxx
 
