--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "nx": "nx",
     "start": "nx serve",
     "start:debug": "cd apps/artemis-web && NODE_OPTIONS='--inspect' next dev -p 4200",
+    "start:notification": "nx serve artemis-notification",
     "build": "nx build",
     "test": "nx test",
     "lint": "nx workspace-lint && nx lint",
@@ -44,6 +45,7 @@
     "diff_match_patch": "^0.1.1",
     "draft-js": "^0.11.7",
     "express-rate-limit": "^5.5.0",
+    "firebase-admin": "^10.0.2",
     "graphql": "^16.0.1",
     "jsonwebtoken": "^8.5.1",
     "lambda-captcha": "^2.1.2",
@@ -52,6 +54,7 @@
     "next": "^12.2.0",
     "next-connect": "^0.11.0",
     "next-session": "^4.0.2",
+    "node-fetch": "^2.6.1",
     "nx": "^13.1.2",
     "passport": "^0.5.0",
     "passport-google-oauth": "^2.0.0",
@@ -89,7 +92,9 @@
     "@nrwl/cypress": "^13.4.3",
     "@nrwl/eslint-plugin-nx": "13.1.2",
     "@nrwl/jest": "13.1.2",
+    "@nrwl/linter": "13.10.1",
     "@nrwl/next": "13.1.2",
+    "@nrwl/node": "13.10.1",
     "@nrwl/react": "13.1.2",
     "@nrwl/web": "13.1.2",
     "@nrwl/workspace": "13.1.2",
