fix: service account path .env

--- a/.env
+++ b/.env
@@ -39,6 +39,9 @@ API_HOST=postgrest
 API_PORT=3000
 DATABASE_HOST=database
 
+# FIREBASE
+SERVICE_ACCOUNT_PATH=
+
 RABBITMQ_USER=guest
 RABBITMQ_PASS=guest
 RABBITMQ_HOST=rabbitmq
