--- a/package.json
+++ b/package.json
@@ -128,6 +128,9 @@
     "url-loader": "^4.1.1",
     "whatwg-fetch": "^3.6.2"
   },
+  "resolutions": {
+    "ldapauth-fork": "^5.0.2"
+  },
   "husky": {
     "hooks": {
       "pre-commit": "yarn run format && yarn run lint",
