--- a/package.json
+++ b/package.json
@@ -28,32 +28,33 @@
   },
   "private": true,
   "dependencies": {
-    "@apollo/client": "^3.4.16",
-    "@material-ui/core": "^4.12.3",
-    "@material-ui/icons": "^4.11.2",
-    "@types/jsonwebtoken": "^8.5.5",
-    "@types/react-bootstrap-table-next": "^4.0.16",
-    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.5",
+    "@apollo/client": "^3.6.9",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
+    "@types/jsonwebtoken": "^8.5.8",
+    "@types/react-bootstrap-table-next": "^4.0.18",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.7",
     "amqp-ts": "^1.8.0",
-    "argon2": "^0.28.2",
+    "argon2": "^0.28.7",
     "chance": "^1.1.8",
-    "codemirror": "^5.63.3",
+    "codemirror": "^6.0.1",
     "cors": "^2.8.5",
-    "cross-fetch": "^3.1.4",
+    "cross-fetch": "^3.1.5",
     "cypress-plugin-snapshots": "^1.4.4",
     "diff_match_patch": "^0.1.1",
     "draft-js": "^0.11.7",
-    "express-rate-limit": "^5.5.0",
-    "graphql": "^16.0.1",
+    "express-rate-limit": "^6.4.0",
+    "graphql": "^16.5.0",
     "jsonwebtoken": "^8.5.1",
     "lambda-captcha": "^2.1.2",
-    "mongodb": "^4.1.3",
-    "nanoid": "^3.1.30",
-    "next": "^12.2.0",
-    "next-connect": "^0.11.0",
-    "next-session": "^4.0.2",
-    "nx": "^13.1.2",
-    "passport": "^0.5.0",
+    "ldapauth-fork": "^5.0.5",
+    "mongodb": "^4.7.0",
+    "nanoid": "^4.0.0",
+    "next": "^12.2.1",
+    "next-connect": "^1.0.0-next.1",
+    "next-session": "^4.0.5",
+    "nx": "^14.4.2",
+    "passport": "^0.6.0",
     "passport-google-oauth": "^2.0.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-ldapauth": "^3.0.1",
@@ -65,66 +66,66 @@
     "react-bootstrap-table2-filter": "^1.3.3",
     "react-bootstrap-table2-paginator": "^2.1.2",
     "react-bootstrap-table2-toolkit": "^2.1.3",
-    "react-burger-menu": "^3.0.6",
+    "react-burger-menu": "^3.0.8",
     "react-codemirror2": "^7.2.1",
     "react-dom": "^18.2.0",
     "react-hotkeys": "^2.0.0",
     "react-media": "^1.10.0",
-    "react-minimal-datetime-range": "^1.7.0",
+    "react-minimal-datetime-range": "^2.0.7",
     "react-nice-input-password": "^2.7.0",
-    "react-spring": "^9.3.0",
+    "react-spring": "^9.4.5",
     "react-super-cmd": "^1.0.6",
-    "react-toastify": "^8.0.3",
+    "react-toastify": "^9.0.5",
     "react-tooltip": "^4.2.21",
-    "sharp": "^0.29.2",
-    "subscriptions-transport-ws": "^0.9.18",
-    "telnet-client": "^2.0.1",
-    "tslib": "^2.1.0",
+    "sharp": "^0.30.7",
+    "subscriptions-transport-ws": "^0.11.0",
+    "telnet-client": "^2.0.3",
+    "tslib": "^2.4.0",
     "typescript-rabbitmq": "^0.0.8",
-    "uuidv4": "^6.2.12",
+    "uuidv4": "^6.2.13",
     "validator": "^13.7.0"
   },
   "devDependencies": {
-    "@next/eslint-plugin-next": "^12.0.2",
-    "@nrwl/cypress": "^13.4.3",
-    "@nrwl/eslint-plugin-nx": "13.1.2",
-    "@nrwl/jest": "13.1.2",
-    "@nrwl/next": "13.1.2",
-    "@nrwl/react": "13.1.2",
-    "@nrwl/web": "13.1.2",
-    "@nrwl/workspace": "13.1.2",
-    "@testing-library/react": "12.1.2",
-    "@types/jest": "^27.0.2",
-    "@types/node": "~16.11.6",
-    "@types/passport": "^1.0.4",
-    "@types/react": "17.0.33",
-    "@types/react-dom": "17.0.10",
-    "@typescript-eslint/eslint-plugin": "5.3.0",
-    "@typescript-eslint/parser": "5.3.0",
-    "axe-core": "^4.3.5",
-    "cypress": "^9.2.0",
-    "cypress-axe": "^0.14.0",
-    "dotenv": "10.0.0",
+    "@next/eslint-plugin-next": "^12.2.1",
+    "@nrwl/cypress": "^14.4.2",
+    "@nrwl/eslint-plugin-nx": "14.4.2",
+    "@nrwl/jest": "14.4.2",
+    "@nrwl/next": "14.4.2",
+    "@nrwl/react": "14.4.2",
+    "@nrwl/web": "14.4.2",
+    "@nrwl/workspace": "14.4.2",
+    "@testing-library/react": "13.3.0",
+    "@types/jest": "^28.1.4",
+    "@types/node": "~18.0.3",
+    "@types/passport": "^1.0.9",
+    "@types/react": "18.0.15",
+    "@types/react-dom": "18.0.6",
+    "@typescript-eslint/eslint-plugin": "5.30.5",
+    "@typescript-eslint/parser": "5.30.5",
+    "axe-core": "^4.4.2",
+    "cypress": "^10.3.0",
+    "cypress-axe": "^1.0.0",
+    "dotenv": "16.0.1",
     "enzyme": "^3.11.0",
-    "eslint": "<8.0.0",
-    "eslint-config-prettier": "8.3.0",
+    "eslint": "8.19.0",
+    "eslint-config-prettier": "8.5.0",
     "eslint-plugin-cypress": "^2.12.1",
-    "eslint-plugin-import": "2.25.2",
-    "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-react": "7.26.1",
-    "eslint-plugin-react-hooks": "4.2.0",
-    "husky": "^7.0.4",
-    "jest": "^27.3.1",
-    "jest-axe": "^5.0.1",
+    "eslint-plugin-import": "2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.6.0",
+    "eslint-plugin-react": "7.30.1",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "husky": "^8.0.1",
+    "jest": "^28.1.2",
+    "jest-axe": "^6.0.0",
     "jest-fetch-mock": "^3.0.3",
-    "msw": "^0.35.0",
+    "msw": "^0.43.1",
     "next-secure-headers": "^2.2.0",
-    "node-sass": "^6.0.1",
-    "prettier": "2.4.1",
+    "node-sass": "^7.0.1",
+    "prettier": "2.7.1",
     "react-axe": "^3.5.4",
-    "ts-jest": "^27.0.7",
-    "ts-node": "~10.4.0",
-    "typescript": "^4.4.4",
+    "ts-jest": "^28.0.5",
+    "ts-node": "~10.8.2",
+    "typescript": "^4.7.4",
     "url-loader": "^4.1.1",
     "whatwg-fetch": "^3.6.2"
   },
