--- a/package.json
+++ b/package.json
@@ -102,8 +102,8 @@
     "@types/jest": "^27.0.2",
     "@types/node": "~16.11.6",
     "@types/passport": "^1.0.4",
-    "@types/react": "17.0.33",
-    "@types/react-dom": "17.0.10",
+    "@types/react": "^18.0.17",
+    "@types/react-dom": "^18.0.6",
     "@typescript-eslint/eslint-plugin": "5.3.0",
     "@typescript-eslint/parser": "5.3.0",
     "axe-core": "^4.3.5",
