--- a/package.json
+++ b/package.json
@@ -88,29 +88,29 @@
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^12.0.2",
-    "@nrwl/cypress": "^13.4.3",
-    "@nrwl/eslint-plugin-nx": "13.1.2",
-    "@nrwl/jest": "13.1.2",
-    "@nrwl/linter": "13.10.1",
-    "@nrwl/next": "13.1.2",
-    "@nrwl/node": "13.10.1",
-    "@nrwl/react": "13.1.2",
-    "@nrwl/web": "13.1.2",
-    "@nrwl/workspace": "13.1.2",
+    "@nrwl/cypress": "^14.5.8",
+    "@nrwl/eslint-plugin-nx": "^14.5.8",
+    "@nrwl/jest": "^14.5.8",
+    "@nrwl/linter": "^14.5.8",
+    "@nrwl/next": "^14.5.8",
+    "@nrwl/node": "^14.5.8",
+    "@nrwl/react": "^14.5.8",
+    "@nrwl/web": "^14.5.8",
+    "@nrwl/workspace": "^14.5.8",
     "@testing-library/react": "12.1.2",
     "@types/jest": "^27.0.2",
-    "@types/node": "~16.11.6",
+    "@types/node": "^18.7.9",
     "@types/passport": "^1.0.4",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@typescript-eslint/eslint-plugin": "5.3.0",
     "@typescript-eslint/parser": "5.3.0",
     "axe-core": "^4.3.5",
-    "cypress": "^9.2.0",
+    "cypress": "^10.6.0",
     "cypress-axe": "^0.14.0",
+    "cypress-plugin-snapshots": "^1.4.4",
     "dotenv": "10.0.0",
     "enzyme": "^3.11.0",
-    "cypress-plugin-snapshots": "^1.4.4",
     "eslint": "<8.0.0",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-cypress": "^2.12.1",
