--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "nx": "nx",
     "start": "nx serve",
     "start:debug": "cd apps/artemis-web && NODE_OPTIONS='--inspect' next dev -p 4200",
+    "start:notification": "nx serve artemis-notification",
     "build": "nx build",
     "test": "nx test",
     "lint": "nx workspace-lint && nx lint",
@@ -35,15 +36,15 @@
     "@types/react-bootstrap-table-next": "^4.0.16",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.5",
     "amqp-ts": "^1.8.0",
-    "argon2": "^0.28.2",
+    "argon2": "^0.28.7",
     "chance": "^1.1.8",
     "codemirror": "^5.63.3",
     "cors": "^2.8.5",
     "cross-fetch": "^3.1.4",
-    "cypress-plugin-snapshots": "^1.4.4",
     "diff_match_patch": "^0.1.1",
     "draft-js": "^0.11.7",
     "express-rate-limit": "^5.5.0",
+    "firebase-admin": "^10.0.2",
     "graphql": "^16.0.1",
     "jsonwebtoken": "^8.5.1",
     "lambda-captcha": "^2.1.2",
@@ -52,8 +53,9 @@
     "next": "^12.2.0",
     "next-connect": "^0.11.0",
     "next-session": "^4.0.2",
+    "node-fetch": "^2.6.1",
     "nx": "^13.1.2",
-    "passport": "^0.5.0",
+    "passport": "^0.4.1",
     "passport-google-oauth": "^2.0.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-ldapauth": "^3.0.1",
@@ -79,31 +81,34 @@
     "sharp": "^0.29.2",
     "subscriptions-transport-ws": "^0.9.18",
     "telnet-client": "^2.0.1",
-    "tslib": "^2.1.0",
+    "tslib": "^2.4.0",
     "typescript-rabbitmq": "^0.0.8",
     "uuidv4": "^6.2.12",
     "validator": "^13.7.0"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^12.0.2",
-    "@nrwl/cypress": "^13.4.3",
-    "@nrwl/eslint-plugin-nx": "13.1.2",
-    "@nrwl/jest": "13.1.2",
-    "@nrwl/next": "13.1.2",
-    "@nrwl/react": "13.1.2",
-    "@nrwl/web": "13.1.2",
-    "@nrwl/workspace": "13.1.2",
+    "@nrwl/cypress": "^13.10.3",
+    "@nrwl/eslint-plugin-nx": "^13.10.3",
+    "@nrwl/jest": "^13.10.3",
+    "@nrwl/linter": "^13.10.3",
+    "@nrwl/next": "^13.10.3",
+    "@nrwl/node": "^13.10.3",
+    "@nrwl/react": "^13.10.3",
+    "@nrwl/web": "^13.10.3",
+    "@nrwl/workspace": "^13.10.3",
     "@testing-library/react": "12.1.2",
     "@types/jest": "^27.0.2",
-    "@types/node": "~16.11.6",
+    "@types/node": "^18.7.9",
     "@types/passport": "^1.0.4",
-    "@types/react": "17.0.33",
-    "@types/react-dom": "17.0.10",
+    "@types/react": "^18.0.17",
+    "@types/react-dom": "^18.0.6",
     "@typescript-eslint/eslint-plugin": "5.3.0",
     "@typescript-eslint/parser": "5.3.0",
     "axe-core": "^4.3.5",
-    "cypress": "^9.2.0",
+    "cypress": "^9.7.0",
     "cypress-axe": "^0.14.0",
+    "cypress-plugin-snapshots": "^1.4.4",
     "dotenv": "10.0.0",
     "enzyme": "^3.11.0",
     "eslint": "<8.0.0",
@@ -122,7 +127,7 @@
     "node-sass": "^6.0.1",
     "prettier": "2.4.1",
     "react-axe": "^3.5.4",
-    "ts-jest": "^27.0.7",
+    "ts-jest": "^28.0.1",
     "ts-node": "~10.4.0",
     "typescript": "^4.4.4",
     "url-loader": "^4.1.1",
