--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "express-rate-limit": "^6.6.0",
     "firebase-admin": "^11.0.1",
     "graphql": "^16.0.1",
+    "jest-environment-jsdom": "^29.1.2",
     "jsonwebtoken": "^8.5.1",
     "lambda-captcha": "^2.1.2",
     "mongodb": "^4.9.1",
@@ -105,6 +106,7 @@
     "@types/react-dom": "^18.0.6",
     "@typescript-eslint/eslint-plugin": "5.36.1",
     "@typescript-eslint/parser": "5.36.1",
+    "@zarconontol/enzyme-adapter-react-18": "^0.7.3",
     "axe-core": "^4.3.5",
     "cypress": "^10.7.0",
     "cypress-axe": "^1.0.0",
@@ -119,7 +121,7 @@
     "eslint-plugin-react": "7.31.6",
     "eslint-plugin-react-hooks": "4.6.0",
     "husky": "^8.0.1",
-    "jest": "^29.0.2",
+    "jest": "^29.1.2",
     "jest-axe": "^6.0.0",
     "jest-fetch-mock": "^3.0.3",
     "msw": "^0.47.0",
@@ -127,7 +129,7 @@
     "node-sass": "^7.0.1",
     "prettier": "2.7.1",
     "react-axe": "^3.5.4",
-    "ts-jest": "^28.0.1",
+    "ts-jest": "^29.0.3",
     "ts-node": "~10.9.1",
     "typescript": "^4.8.2",
     "url-loader": "^4.1.1",
