--- a/package.json
+++ b/package.json
@@ -32,29 +32,30 @@
     "@apollo/client": "^3.4.16",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
-    "@types/jsonwebtoken": "^8.5.5",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/react-bootstrap-table-next": "^4.0.16",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.5",
     "amqp-ts": "^1.8.0",
-    "argon2": "^0.28.7",
+    "argon2": "^0.29.1",
     "chance": "^1.1.8",
     "codemirror": "^5.63.3",
     "cors": "^2.8.5",
     "cross-fetch": "^3.1.4",
     "diff_match_patch": "^0.1.1",
     "draft-js": "^0.11.7",
-    "express-rate-limit": "^5.5.0",
-    "firebase-admin": "^10.0.2",
+    "express-rate-limit": "^6.6.0",
+    "firebase-admin": "^11.0.1",
     "graphql": "^16.0.1",
+    "jest-environment-jsdom": "^29.1.2",
     "jsonwebtoken": "^8.5.1",
     "lambda-captcha": "^2.1.2",
-    "mongodb": "^4.1.3",
+    "mongodb": "^4.9.1",
     "nanoid": "^3.1.30",
     "next": "^12.2.0",
-    "next-connect": "^0.11.0",
+    "next-connect": "^0.13.0",
     "next-session": "^4.0.2",
     "node-fetch": "^2.6.1",
-    "nx": "^13.1.2",
+    "nx": "^14.6.4",
     "passport": "^0.4.1",
     "passport-google-oauth": "^2.0.0",
     "passport-google-oauth20": "^2.0.0",
@@ -72,14 +73,14 @@
     "react-dom": "^18.2.0",
     "react-hotkeys": "^2.0.0",
     "react-media": "^1.10.0",
-    "react-minimal-datetime-range": "^1.7.0",
+    "react-minimal-datetime-range": "^2.0.7",
     "react-nice-input-password": "^2.7.0",
     "react-spring": "^9.3.0",
     "react-super-cmd": "^1.0.6",
-    "react-toastify": "^8.0.3",
+    "react-toastify": "^9.0.8",
     "react-tooltip": "^4.2.21",
-    "sharp": "^0.29.2",
-    "subscriptions-transport-ws": "^0.9.18",
+    "sharp": "^0.31.0",
+    "subscriptions-transport-ws": "^0.11.0",
     "telnet-client": "^2.0.1",
     "tslib": "^2.4.0",
     "typescript-rabbitmq": "^0.0.8",
@@ -88,48 +89,49 @@
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^12.0.2",
-    "@nrwl/cypress": "^13.10.3",
-    "@nrwl/eslint-plugin-nx": "^13.10.3",
-    "@nrwl/jest": "^13.10.3",
-    "@nrwl/linter": "^13.10.3",
-    "@nrwl/next": "^13.10.3",
-    "@nrwl/node": "^13.10.3",
-    "@nrwl/react": "^13.10.3",
-    "@nrwl/web": "^13.10.3",
-    "@nrwl/workspace": "^13.10.3",
-    "@testing-library/react": "12.1.2",
-    "@types/jest": "^27.0.2",
-    "@types/node": "^18.7.9",
+    "@nrwl/cypress": "^14.6.4",
+    "@nrwl/eslint-plugin-nx": "^14.6.4",
+    "@nrwl/jest": "^14.6.4",
+    "@nrwl/linter": "^14.6.4",
+    "@nrwl/next": "^14.6.4",
+    "@nrwl/node": "^14.6.4",
+    "@nrwl/react": "^14.6.4",
+    "@nrwl/web": "^14.6.4",
+    "@nrwl/workspace": "^14.6.4",
+    "@testing-library/react": "13.4.0",
+    "@types/jest": "^29.0.0",
+    "@types/node": "^18.7.15",
     "@types/passport": "^1.0.4",
-    "@types/react": "^18.0.17",
+    "@types/react": "^18.0.18",
     "@types/react-dom": "^18.0.6",
-    "@typescript-eslint/eslint-plugin": "5.3.0",
-    "@typescript-eslint/parser": "5.3.0",
+    "@typescript-eslint/eslint-plugin": "5.36.1",
+    "@typescript-eslint/parser": "5.36.1",
+    "@zarconontol/enzyme-adapter-react-18": "^0.7.3",
     "axe-core": "^4.3.5",
-    "cypress": "^9.7.0",
-    "cypress-axe": "^0.14.0",
+    "cypress": "10.9.0",
+    "cypress-axe": "^1.0.0",
     "cypress-plugin-snapshots": "^1.4.4",
-    "dotenv": "10.0.0",
+    "dotenv": "16.0.2",
     "enzyme": "^3.11.0",
-    "eslint": "<8.0.0",
-    "eslint-config-prettier": "8.3.0",
+    "eslint": "8.23.0",
+    "eslint-config-prettier": "8.5.0",
     "eslint-plugin-cypress": "^2.12.1",
-    "eslint-plugin-import": "2.25.2",
+    "eslint-plugin-import": "2.26.0",
     "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-react": "7.26.1",
-    "eslint-plugin-react-hooks": "4.2.0",
-    "husky": "^7.0.4",
-    "jest": "^27.3.1",
-    "jest-axe": "^5.0.1",
+    "eslint-plugin-react": "7.31.6",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "husky": "^8.0.1",
+    "jest": "^29.1.2",
+    "jest-axe": "^6.0.0",
     "jest-fetch-mock": "^3.0.3",
     "msw": "^0.35.0",
     "next-secure-headers": "^2.2.0",
-    "node-sass": "^6.0.1",
-    "prettier": "2.4.1",
+    "node-sass": "^7.0.1",
+    "prettier": "2.7.1",
     "react-axe": "^3.5.4",
-    "ts-jest": "^28.0.1",
-    "ts-node": "~10.4.0",
-    "typescript": "^4.4.4",
+    "ts-jest": "^29.0.3",
+    "ts-node": "~10.9.1",
+    "typescript": "^4.8.2",
     "url-loader": "^4.1.1",
     "whatwg-fetch": "^3.6.2"
   },
