--- a/.env
+++ b/.env
@@ -48,7 +48,7 @@ RABBITMQ_HOST=rabbitmq
 RABBITMQ_PORT=5672
 
 CSRF_SECRET="P*3NGEEaJV3yUGDJA9428EQRg!ad"
-SYSTEM_VERSION=latest
+SYSTEM_VERSION=release-2.2.0
 TESTING=false
 
 # session timeout in seconds
