--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "firebase-admin": "^10.0.2",
     "graphql": "^16.0.1",
     "jest-environment-jsdom": "^29.1.2",
+    "js-yaml": "^4.1.0",
     "jsonwebtoken": "^8.5.1",
     "lambda-captcha": "^2.1.2",
     "mongodb": "^4.9.1",
