--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/jsonwebtoken": "^8.5.9",
     "@types/react-bootstrap-table-next": "^4.0.16",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.5",
+    "addrs": "^0.0.3",
     "amqp-ts": "^1.8.0",
     "argon2": "^0.28.7",
     "chance": "^1.1.8",
