--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "chance": "^1.1.8",
     "codemirror": "^5.63.3",
     "cors": "^2.8.5",
+    "cors-anywhere": "^0.4.4",
     "cross-fetch": "^3.1.4",
     "diff_match_patch": "^0.1.1",
     "draft-js": "^0.11.7",
