--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "lambda-captcha": "^2.1.2",
     "mongodb": "^4.9.1",
     "nanoid": "^3.1.30",
+    "netaddr": "^1.1.0",
     "next": "^12.2.0",
     "next-connect": "^0.11.0",
     "next-session": "^4.0.2",
